Add Final Report.

--- a/airbnb.ipynb
+++ b/airbnb.ipynb
@@ -4679,44 +4679,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 733,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "      Iter       Train Loss   Remaining Time \n",
-      "         1      299518.1509           10.28m\n",
-      "         2      271440.9406           10.09m\n",
-      "         3      251522.0338            9.77m\n",
-      "         4      236447.4553            9.51m\n",
-      "         5      224750.1175            9.33m\n",
-      "         6      215414.7230            9.13m\n",
-      "         7      207884.4993            8.99m\n",
-      "         8      201780.4542            8.83m\n",
-      "         9      196785.3169            8.71m\n",
-      "        10      192626.4877            8.60m\n",
-      "        20      174466.0907            7.47m\n",
-      "        30      170310.7227            6.74m\n",
-      "        40      168863.9664            5.83m\n",
-      "        50      168067.4481            4.75m\n",
-      "        60      167415.6315            3.72m\n",
-      "        70      166787.1453            2.75m\n",
-      "        80      166272.5678            1.82m\n",
-      "        90      165725.8483           54.30s\n",
-      "       100      165428.2939            0.00s\n"
+      "         1      299518.1509            9.96m\n",
+      "         2      271440.9406            9.98m\n",
+      "         3      251522.0338           10.02m\n",
+      "         4      236447.4553            9.88m\n",
+      "         5      224750.1175            9.79m\n",
+      "         6      215414.7230            9.67m\n",
+      "         7      207884.4993            9.55m\n",
+      "         8      201780.4542            9.43m\n",
+      "         9      196785.3169            9.27m\n",
+      "        10      192626.4877            9.14m\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0.63836366021400592"
-      ]
-     },
-     "execution_count": 733,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
